monitoring/deployment/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-ingress
  namespace: go-app
spec:
  ingressClassName: nginx
  rules:
  - host: techanek.work.gd
    http:
      paths:
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: go-service
            port:
              number: 8080
